# vendor-eval-kit

./: .gitignore  Dockerfile  README.md  daemon.json  pyproject.toml
vendor_eval/: __init__.py  cli.py  collect.py
